--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -165,6 +165,8 @@ border-spacing: 0;
   padding-bottom: 25px;
   -webkit-transition: opacity 1s;
   transition: opacity 1s;
+  opacity: 0;
+  max-height: 0;
 }
 
  .hobby__title {
@@ -184,6 +186,32 @@ border-spacing: 0;
     padding-top: 20px;
     padding-bottom: 20px;
     width: 90%;
+  }
+
+ .hobby__resetButton {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-right: 5%;
+  }
+
+ .hobby__reset {
+    border: 1px solid #000;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
  body {
@@ -237,11 +265,6 @@ border-spacing: 0;
 
  .js-none {
   display: none;
-}
-
- .js-hidden {
-  opacity: 0;
-  max-height: 0;
 }
 
  .js-show {
