--- a/src/css/module/_quest.css
+++ b/src/css/module/_quest.css
@@ -19,4 +19,25 @@
     top: 25px;
     left: 15px;
   }
+
+  &__matchWrap {
+    position: absolute;
+    top: 50px;
+    right: 10px;
+  }
+
+  &__match {
+    border: 1px solid orange;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+    height: 30px;
+    width: 30px;
+  }
+
+  &__matchPer {
+    font-size: 8px;
+  }
 }
