--- a/src/css/module/_condidate.css
+++ b/src/css/module/_condidate.css
@@ -19,6 +19,7 @@
   &__link {
     border: 1px solid #000;
     border-radius: 3px;
+    box-shadow: 0 2px 4px #e6e6e6;
     display: inline-block;
     padding-top: 15px;
     padding-bottom: 15px;
