--- a/src/css/module/_hobby.css
+++ b/src/css/module/_hobby.css
@@ -22,6 +22,7 @@
   &__link {
     background-color: #fcf9ef;
     border: 1px solid #000;
+    box-shadow: 0 2px 4px #e6e6e6;
     display: inline-block;
     font-size: 14px;
     padding-top: 20px;
@@ -76,7 +77,7 @@
     margin-right: 5%;
   }
 
-  &__reset {
+  &__button {
     border: 1px solid #000;
     border-radius: 50%;
     height: 40px;
